--- a/website/src/theme/BlogPostItem/Header/Info/styles.module.css
+++ b/website/src/theme/BlogPostItem/Header/Info/styles.module.css
@@ -1,6 +1,7 @@
 .container {
   color: #1c1e21;
   display: flex;
+  gap:10px;
   flex-direction: row;
   align-items: center;
   font-size: 1.1rem;
